2009-11-04  Pavel Heimlich  <tropikhajma@gmail.com>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=30647
        Solaris build failure due to strnstr.

        * wtf/StringExtras.h: Enable strnstr on Solaris, too.



git-svn-id: svn://svn.chromium.org/blink/trunk@50533 bbb929c8-8fbe-4397-9dbb-9b2b20218538